--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "^10.4.8",
     "bootstrap": "^5.2.1",
     "mongodb": "^4.9.1",
+    "mongoose": "^6.6.0",
     "next": "12.2.5",
     "next-auth": "^4.10.3",
     "postcss": "^8.4.16",
