--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.0.4",
     "autoprefixer": "^10.4.8",
+    "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
     "mongodb": "^4.9.1",
     "mongoose": "^6.6.0",
