--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "postcss": "^8.4.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-file-drop": "^3.1.5",
+    "react-flip-numbers": "^3.0.6",
+    "react-spinners": "^0.13.4",
+    "react-time-ago": "^7.2.1",
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
