--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "^10.4.8",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
+    "javascript-time-ago": "^2.5.7",
     "mongodb": "^4.9.1",
     "mongoose": "^6.6.0",
     "next": "12.2.5",
