--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "18.2.0",
     "react-file-drop": "^3.1.5",
     "react-flip-numbers": "^3.0.6",
+    "react-spinner": "^0.2.7",
     "react-spinners": "^0.13.4",
     "react-time-ago": "^7.2.1",
     "tailwindcss": "^3.1.8"
